# first-python-notebook-vscode

./: .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
docs/: DUAL_FORMAT_GUIDE.md  Makefile  requirements.txt
docs/src/: charts.md  columns.md  compute.md  concat.md  conf.py  dataframe.md  export.md  filters.md  groupby.md  index.md  merge.md  notebook.md  pandas.md  sorting.md  vscode_setup.md
docs/src/_includes/: navigation.md
docs/src/appendix/: index.md
docs/src/notebooks/: charts.ipynb  columns.ipynb  compute.ipynb  concat.ipynb  dataframe.ipynb  export.ipynb  filters.ipynb  groupby.ipynb  index.md  merge.ipynb  pandas.ipynb  sorting.ipynb
